--- a/first_page.html
+++ b/first_page.html
@@ -50,7 +50,7 @@
 <body>
 
   <h1>CURRENCY CONVERTER</h1>
-  <button class="login-button" onclick="goToLogin()">Login</button>
+  <button class="login-button" onclick="goToLogin()">submit</button>
 
   <script>
     function goToLogin() {
